--- a/css/stylesheet-default.scss
+++ b/css/stylesheet-default.scss
@@ -8,7 +8,7 @@
 
 // Default background color
 body {
-  background-color: #f2f2f2;
+  background-color: #00FFFF;
 }
 
 // Default menubar color
@@ -18,7 +18,7 @@ body {
 
 // Default home page icon color
 .icon-color {
-  color: darken(silver, 40%);
+  color: #00FFFF;
 }
 
 
