--- a/css/stylesheet-default.scss
+++ b/css/stylesheet-default.scss
@@ -8,7 +8,7 @@
 
 // Default background color
 body {
-  background-color: #00FFFF;
+  background-color: #779ecb;
 }
 
 // Default menubar color
@@ -18,7 +18,7 @@ body {
 
 // Default home page icon color
 .icon-color {
-  color: #00FFFF;
+  color: #779ecb;
 }
 
 
