--- a/css/stylesheet-default.scss
+++ b/css/stylesheet-default.scss
@@ -13,7 +13,7 @@ body {
 
 // Default menubar color
 .ui.menu {
-  background: lighten(silver, 10%);
+  background: white;
 }
 
 // Default home page icon color
