--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -5,18 +5,16 @@
 // Put your custom CSS here if you want to override the defaults.
 // Here are some common customizations for colors
 
-// Customize the background color
-body {
-  // background-color: #f2f2f2;;
+ody {
+  background-color: #779ecb;
 }
 
-// Customize the menubar color
+// Default menubar color
 .ui.menu {
-  // background: $background-start;
+  background: white;
 }
 
-// Customize the home page icon colors
+// Default home page icon color
 .icon-color {
-  // color: silver;
+  color: #779ecb;
 }
-
