--- a/css/stylesheet-customizations.scss
+++ b/css/stylesheet-customizations.scss
@@ -5,7 +5,7 @@
 // Put your custom CSS here if you want to override the defaults.
 // Here are some common customizations for colors
 
-ody {
+body {
   background-color: #779ecb;
 }
 
